added prototypeish gear puzzle

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Test/Math-Dungeon_Data/sharedassets0.assets.resS
+Test/Math-Dungeon_Data/sharedassets0.assets.resS
