--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Test/Math-Dungeon_Data/sharedassets0.assets.resS
 Test/Math-Dungeon_Data/sharedassets0.assets.resS
+Test/Math-Dungeon_Data/sharedassets0.assets.resS
