Correcte spawn locaties

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,5 @@ crashlytics-build.properties
 Test/Math-Dungeon_Data/sharedassets0.assets.resS
 Test/Math-Dungeon_Data/sharedassets0.assets.resS
 Test/Math-Dungeon_Data/sharedassets0.assets.resS
+Test/Math-Dungeon_Data/sharedassets4.assets.resS
+Test/Math-Dungeon_Data/sharedassets3.assets.resS
