--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.multiplayer.samples.coop": "https://github.com/Unity-Technologies/com.unity.multiplayer.samples.coop.git?path=/Packages/com.unity.multiplayer.samples.coop#main",
     "com.unity.multiplayer.tools": "1.1.0",
     "com.unity.netcode.gameobjects": "1.6.0",
+    "com.unity.services.analytics": "5.1.0",
     "com.unity.services.lobby": "1.1.0",
     "com.unity.services.relay": "1.0.5",
     "com.unity.test-framework": "1.3.9",
